fixed header spacing

--- a/src/neo/components/ProjectHeader/style.css
+++ b/src/neo/components/ProjectHeader/style.css
@@ -21,7 +21,7 @@
   padding: 3px 26px 3px 6px;
   font-weight: bold;
   cursor: pointer;
-  min-width: 135px;
+  min-width: 143px;
 }
 
 .header .title~i {
